# FHE-Vector-Similarity

./: CMakeLists.txt  DESIGN.md  README.md  run_demo.sh
include/: ThresholdVectorSimilarity.h
src/: ThresholdVectorSimilarity.cpp  main.cpp
